[package]
name = "webgl2_3d"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
gl_matrix = "0.0.2"
js-sys = "0.3.72"
tokio = { version = "1.41.0", features = ["rt"] }
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
web-sys = {version="0.3.72", features=['console','Window','Document','HtmlCanvasElement','Element','Response','WebGl2RenderingContext','WebGlShader','WebGlProgram','WebGlBuffer','WebGlUniformLocation']}

[lib]
crate-type = ["cdylib"]
